# meow

./: Cargo.toml  README.md  meow.mw
src/: errors.rs  grammar.txt  lib.rs  main.rs
src/errors/: mod.rs
src/lexer/: mod.rs  old_mod.rs  token.rs
src/parser/: ast.rs  expression.rs  mod.rs  precedence.rs
tests/: lexer.rs
